--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>University</title>
+<title>My Portfolio</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
@@ -17,15 +17,17 @@
 </div>
 <div class="content">
 <div class="inner">
-<h1>UNIVERSITY</h1>
+<h1>MY PORTFOLIO</h1>
+<p>Hi! I'm Gandla Sanjay. A mobile application diploma student from Hanson College actively seeking co-op job in full stack development in where I can utilize all my skills and knowledge for the growth of organization and myself.
+</p>
 </div>
 </div>
 <nav>
 <ul>
-<li><a href="#">Admin Login</a></li>
-<li><a href="#">Instructor Login</a></li>
-<li><a href="userid.html">Student Login</a></li>
-<li><a href="#">Agent Login</a></li>
+<li><a href="#skills">Skills</a></li>
+<li><a href="#projects">Projects</a></li>
+<li><a href="#education">Experience</a></li>
+<li><a href="#contact">Contact</a></li>
 
 </ul>
 </nav>
@@ -84,12 +86,12 @@
 <tr>
 <td>DataBaseAdministrator</td>
 <td>Reviewing and modifying the several data bases of associates belonging to North America.</td>
-<td>Sept,2020-Mar,2021</td>
+<td>Sept,2019-Mar,2020</td>
 </tr>
 <tr>
 <td>Amazon Robotics</td>
 <td>Teaching ML code for the robots present in the fulfilment center.</td>
-<td>Mar,2021-Aug, 2023</td>
+<td>Mar,2020-Present</td>
 </tr>
 </table>
 </div>
@@ -105,21 +107,15 @@
 </thead>
 <tbody>
 <tr>
-<td>B.TECH</td>
-<td>Jawaharlal Nehru Technological University</td>
-<td>2017-2021</td>
+<td>B.E</td>
+<td>Osmania University</td>
+<td>2015-2019</td>
 </tr>
 <tr>
 <td>PG-Diploma</td>
-<td>ALGOMA UNIVERSITY</td>
-<td>2023-2024</td>
+<td>Hanson Cambrian</td>
+<td>2020-2021</td>
 </tr>
-<tr>
-<td>PG-Diploma</td>
-<td>CANADORE AT STANDFORD</td>
-<td>CLASS OF 2024 </td>
-</tr>
-    
 </table>
 </div>
 </section>
@@ -131,11 +127,13 @@
 <form method="post" action="#">
 <div class="fields">
 <div class="field half">
+<label for="name"><b><h4>GANDLA SANJAY</h4></b></label>
+<p>Full Stack Developer</p>
 
 </div>
 <div class="field half">
 <label for="email"><h4>Email</h4></label>
-<p>gandlasandhya99@gmail.com</p>
+<p>gandlasanjay1@gmail.com</p>
 </div>
 <div class="field">
 <label for="message"><h3>Get in Touch!</h3></label>
@@ -143,9 +141,10 @@
 </div>
 </form>
 <ul class="icons">
-<li><a href="https://www.facebook.com/gandlasandhya/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-<li><a href="https://www.instagram.com/sandhya.gandla/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-<li><a href="https://github.com/GANDLASANDHYA" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+<li><a href="https://twitter.com/gandlasanjay1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+<li><a href="https://www.facebook.com/gandlasanju/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+<li><a href="https://www.instagram.com/sanjaygandla/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+<li><a href="https://github.com/GANDLASANJAY" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 </ul>
 </article>
 <!-- Elements -->
@@ -379,6 +378,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 </div>
 <!-- Footer -->
 <footer id="footer">
+<p class="copyright">GANDLA SANJAY : Full Stack Developer.</a>.</p>
 </footer>
 </div>
 <!-- BG -->
